test/spec/relaxed-atomics2.wast
;; Generated by scripts/test/generate-atomic-spec-test.py. Do not edit manually.

(module
  (memory i32 1 1)
  (memory i64 1 1)

  ;; Memory index must come before memory ordering if present.
  ;; Both immediates are optional; an ommitted memory ordering will be treated as seqcst.
  (func $test-all-ops
    (drop (i32.atomic.load (i32.const 42)))
    (drop (i32.atomic.load acqrel (i32.const 42)))
    (drop (i32.atomic.load seqcst (i32.const 42)))
    (drop (i32.atomic.load 0 (i32.const 42)))
    (drop (i32.atomic.load 0 acqrel (i32.const 42)))
    (drop (i32.atomic.load 0 seqcst (i32.const 42)))
    (drop (i32.atomic.load 1 (i64.const 42)))
    (drop (i32.atomic.load 1 acqrel (i64.const 42)))
    (drop (i32.atomic.load 1 seqcst (i64.const 42)))
    (drop (i64.atomic.load (i32.const 42)))
    (drop (i64.atomic.load acqrel (i32.const 42)))
    (drop (i64.atomic.load seqcst (i32.const 42)))
    (drop (i64.atomic.load 0 (i32.const 42)))
    (drop (i64.atomic.load 0 acqrel (i32.const 42)))
    (drop (i64.atomic.load 0 seqcst (i32.const 42)))
    (drop (i64.atomic.load 1 (i64.const 42)))
    (drop (i64.atomic.load 1 acqrel (i64.const 42)))
    (drop (i64.atomic.load 1 seqcst (i64.const 42)))
    (i32.atomic.store (i32.const 42) (i32.const 42))
    (i32.atomic.store acqrel (i32.const 42) (i32.const 42))
    (i32.atomic.store seqcst (i32.const 42) (i32.const 42))
    (i32.atomic.store 0 (i32.const 42) (i32.const 42))
    (i32.atomic.store 0 acqrel (i32.const 42) (i32.const 42))
    (i32.atomic.store 0 seqcst (i32.const 42) (i32.const 42))
    (i32.atomic.store 1 (i64.const 42) (i32.const 42))
    (i32.atomic.store 1 acqrel (i64.const 42) (i32.const 42))
    (i32.atomic.store 1 seqcst (i64.const 42) (i32.const 42))
    (i64.atomic.store (i32.const 42) (i64.const 42))
    (i64.atomic.store acqrel (i32.const 42) (i64.const 42))
    (i64.atomic.store seqcst (i32.const 42) (i64.const 42))
    (i64.atomic.store 0 (i32.const 42) (i64.const 42))
    (i64.atomic.store 0 acqrel (i32.const 42) (i64.const 42))
    (i64.atomic.store 0 seqcst (i32.const 42) (i64.const 42))
    (i64.atomic.store 1 (i64.const 42) (i64.const 42))
    (i64.atomic.store 1 acqrel (i64.const 42) (i64.const 42))
    (i64.atomic.store 1 seqcst (i64.const 42) (i64.const 42))
  )
)

(assert_invalid (module
  (memory 1 1 shared)

  (func $i32load (drop (i32.load acqrel (i32.const 51))))
) "Can't set memory ordering for non-atomic i32.load")
